Bug 1659118 - Fix collapse styles for mail chat theme. r=aleca
Differential Revision: https://phabricator.services.mozilla.com/D112736

Depends on D112735

--- a/mail/components/im/messages/mail/main.css
+++ b/mail/components/im/messages/mail/main.css
@@ -142,6 +142,10 @@ p *:any-link img {
   opacity: 1;
 }
 
-.hide-children > :is(p.event.row,hr):not(:first-of-type,:last-of-type,.no-collapse) {
+.hide-children > :is(.event-row,hr):not(:first-of-type,:last-of-type,.no-collapse) {
   display: none;
+}
+
+.hide-children .eventToggle {
+  background: url("chrome://global/skin/icons/twisty-collapsed.svg") no-repeat left center;
 }
